implement notification base
