# docs/api-docs.yaml
@@ -522,13 +522,16 @@ components:
           nullable: true
         dueDate:
           type: string
-          format: date-time
           nullable: true
         tags:
           type: array
           items:
             type: integer
             format: int32
+        notificationTags:
+          type: array
+          items:
+            type: string
     Task:
       type: object
       properties:
